--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <section>
             <h1>Mi pagina esta en github!!!</h1>
+            <img src="img/img1.jpg" alt="">
         </section>
     </main>
     <footer></footer>
